<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp" >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/inmersoft" />

    <TextView
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView"
        android:text="@string/app_usuario"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/txtUsuario" />

    <EditText
        android:id="@+id/txtUsuario"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/name"
        android:layout_alignParentRight="true"
        />
    <TextView
        android:id="@+id/name1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtUsuario"
        android:text="@string/app_contrasena"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/txtContrasena" />

    <EditText
        android:id="@+id/txtContrasena"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/name1"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_alignParentRight="true"
        />

    <Button
        android:id="@+id/btnIngresar"
        android:layout_width="96dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtContrasena"
        android:text="@string/btnIngrear"
        android:layout_alignParentRight="true" />




</RelativeLayout>